# trickster-scan

./: README.md  reanalisar.py  ver_requests.py
output/: trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_021006.html  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_021006.json  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_021006.md  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_021350.html  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_021350.json  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_021350.md  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_043720.html  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_043720.json  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_043720.md  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_043807.html  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_043807.json  trickster_https_google-gruyere.appspot.com_45186960863142941_20260617_043807.md
tests/: test_normalizer.py
trickster/: cli.py  config.py  pyproject.toml  requierements.txt  scanner.py
trickster/analysis/: ai_analyzer.py
trickster/capture/: playwright_capture.py
trickster/database/: models.py  repository.py
trickster/reports/: generator.py
trickster/trickster_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
trickster/utils/: logger.py  models.py  normalizer.py
