[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trickster-scanner"
version = "1.0.0"
description = "HTTP Analysis & Vulnerability Scanner powered by AI"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
trickster = "trickster.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trickster*"]